--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,30 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@layer components {
+  .animation_full {
+    @apply transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-110 duration-300;
+  }
+
+  /* width */
+  .standard_scroll::-webkit-scrollbar {
+    width: 5px;
+    border-radius: 10px;
+  }
+
+  /* Track */
+  .standard_scroll::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  .standard_scroll::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  /* Handle on hover */
+  .standard_scroll::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+}
